@@ -4,9 +4,12 @@ import java.io.File;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import addsynth.core.game.RegistryUtil;
+import addsynth.core.material.MaterialsUtil;
+import addsynth.core.util.game.RecipeUtil;
 import addsynth.energy.gameplay.Config;
 import addsynth.energy.gameplay.EnergyBlocks;
 import addsynth.energy.gameplay.compressor.GuiCompressor;
+import addsynth.energy.gameplay.compressor.recipe.CompressorRecipes;
 import addsynth.energy.gameplay.electric_furnace.GuiElectricFurnace;
 import addsynth.energy.gameplay.energy_storage.GuiEnergyStorageContainer;
 import addsynth.energy.gameplay.universal_energy_interface.GuiUniversalEnergyInterface;
@@ -64,6 +67,8 @@ public class ADDSynthEnergy {
 
   private static final void main_setup(final FMLCommonSetupEvent event){
     NetworkHandler.registerMessages();
+    RecipeUtil.registerResponder(CompressorRecipes::build_compressor_filter);
+    MaterialsUtil.registerResponder(CompressorRecipes::build_compressor_filter);
   }
 
   private static final void client_setup(final FMLClientSetupEvent event){
