@@ -15,6 +15,9 @@ public final class Filters {
   // We need to ensure these filters are generated on both the client and server side, otherwise there
   // will be a desync issue, where one side accepts items into the machine while the other does not.
 
+  // TODO: When we do the WorkSystem upgrade, have TileEntities construct their own item filters.
+  //       Keep the variable private, and have the get() method first check if it is null and if it is,
+  //       then construct it first. Always keep the constructed filter as a cached variable.
   public static Item[] gem_converter;
 
   public static Item[] portal_frame;
